workshop04/weather-sidecar.yaml
---
kind: Namespace
apiVersion: v1
metadata: 
  name: myns2
  labels: 
    app: weatherapp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: weatherapp
    version: v1
  name: deploy-weatherapp
  namespace: myns2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pod-weatherapp
      version: v1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"761ebc5a63976754715f22fcf548f05270fb4b8db07324894aebdb31fa81d960","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: pod-weatherapp
        version: v1
      name: pod-weatherapp
    spec:
      containers:
      - env:
        - name: APP_ID
          valueFrom:
            secretKeyRef:
              key: app_id
              name: weatherapp-secret
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        name: weatherapp
        ports:
        - containerPort: 3000
          name: weatherport
        resources: {}
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - pod-weatherapp.$(POD_NAMESPACE)
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15010
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --dnsRefreshRate
        - 300s
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --concurrency
        - "2"
        - --controlPlaneAuthPolicy
        - NONE
        - --statusPort
        - "15020"
        - --applicationPorts
        - "3000"
        image: docker.io/istio/proxyv2:1.2.5
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
kind: Service
apiVersion: v1

metadata:
    name: weatherapp-svc
    namespace: myns2
    labels:
        app: weatherapp

spec:
    type: LoadBalancer
    selector:
        app: pod-weatherapp
    ports:
    - name: weatherapp-svc-port
      port: 80
      targetPort: weatherport
---
