workshop04/weather.yaml
---
kind: Namespace
apiVersion: v1
metadata: 
  name: myns2
  labels: 
    app: weatherapp

---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: deploy-weatherapp
  namespace: myns2
  labels:
    app: weatherapp
    version: v1

spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: pod-weatherapp
      version: v1
  template: 
    metadata: 
      name: pod-weatherapp
      labels: 
        app: pod-weatherapp
        version: v1
    spec:
      containers:
      - name: weatherapp
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        
        ports:
        - name: weatherport
          containerPort: 3000
          
---
kind: Service
apiVersion: v1

metadata:
    name: weatherapp-svc
    namespace: myns2
    labels:
        app: weatherapp

spec:
    type: LoadBalancer
    selector:
        app: pod-weatherapp
    ports:
    - name: weatherapp-svc-port
      port: 80
      targetPort: weatherport
